--- a/ShadowPeople/ShadowPeople.vcxproj.filters
+++ b/ShadowPeople/ShadowPeople.vcxproj.filters
@@ -125,6 +125,15 @@
     <ClInclude Include="shaders\Test.if.h">
       <Filter>Source Files\shaders</Filter>
     </ClInclude>
+    <ClInclude Include="dx11\ResourceViewImpl.hpp">
+      <Filter>Header Files\dx11</Filter>
+    </ClInclude>
+    <ClInclude Include="ShaderResources.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Math.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="shaders\Test.cs.hlsl">
