--- a/ShadowPeople/ShadowPeople.vcxproj
+++ b/ShadowPeople/ShadowPeople.vcxproj
@@ -118,6 +118,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="dx11\BufferImpl.cpp" />
     <ClCompile Include="dx11\BufferViewImpl.cpp" />
     <ClCompile Include="dx11\CommandBufferImpl.cpp" />
@@ -130,12 +131,18 @@
     <ClCompile Include="dx11\ShaderManagerImpl.cpp" />
     <ClCompile Include="dx11\TextureImpl.cpp" />
     <ClCompile Include="dx11\TextureViewImpl.cpp" />
+    <ClCompile Include="GameLogic.cpp" />
     <ClCompile Include="Graphics.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Math.cpp" />
     <ClCompile Include="SceneRenderer.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
+    <ClCompile Include="Types.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Action.hpp" />
+    <ClInclude Include="Camera.hpp" />
     <ClInclude Include="Descriptors.hpp" />
     <ClInclude Include="DX11Graphics.hpp" />
     <ClInclude Include="dx11\BufferImpl.hpp" />
@@ -152,7 +159,9 @@
     <ClInclude Include="dx11\TextureImpl.hpp" />
     <ClInclude Include="dx11\TextureViewImpl.hpp" />
     <ClInclude Include="Errors.hpp" />
+    <ClInclude Include="GameLogic.hpp" />
     <ClInclude Include="Graphics.hpp" />
+    <ClInclude Include="InputManager.hpp" />
     <ClInclude Include="Math.hpp" />
     <ClInclude Include="SceneRenderer.hpp" />
     <ClInclude Include="ShaderManager.hpp" />
