--- a/ShadowPeople/imgui.ini
+++ b/ShadowPeople/imgui.ini
@@ -4,7 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
+Pos=24,31
+Size=791,762
+Collapsed=0
+
+[Window][ImGui Metrics]
 Pos=60,60
-Size=550,680
+Size=402,194
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=60,60
+Size=568,86
 Collapsed=0
 
