--- a/ShadowPeople/imgui.ini
+++ b/ShadowPeople/imgui.ini
@@ -5,8 +5,8 @@ Collapsed=0
 
 [Window][ImGui Demo]
 Pos=24,31
-Size=791,762
-Collapsed=0
+Size=1531,918
+Collapsed=1
 
 [Window][ImGui Metrics]
 Pos=60,60
@@ -16,5 +16,15 @@ Collapsed=0
 [Window][About Dear ImGui]
 Pos=60,60
 Size=568,86
+Collapsed=0
+
+[Window][Example: Layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Console]
+Pos=384,192
+Size=520,600
 Collapsed=0
 
