--- a/ShadowPeople/ShadowPeople.vcxproj
+++ b/ShadowPeople/ShadowPeople.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="dx11\TextureViewImpl.cpp" />
     <ClCompile Include="GameLogic.cpp" />
     <ClCompile Include="Graphics.cpp" />
+    <ClCompile Include="ImageBuffers.cpp" />
     <ClCompile Include="ImGuiInputHandler.cpp" />
     <ClCompile Include="ImGuiRenderer.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
@@ -143,6 +144,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="SceneRenderer.cpp" />
+    <ClCompile Include="ScreenBuffers.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="Types.cpp" />
   </ItemGroup>
@@ -169,6 +171,7 @@
     <ClInclude Include="Errors.hpp" />
     <ClInclude Include="GameLogic.hpp" />
     <ClInclude Include="Graphics.hpp" />
+    <ClInclude Include="ImageBuffers.hpp" />
     <ClInclude Include="ImGuiInputHandler.hpp" />
     <ClInclude Include="ImGuiRenderer.hpp" />
     <ClInclude Include="imgui\imconfig.h" />
@@ -180,6 +183,7 @@
     <ClInclude Include="InputHandler.hpp" />
     <ClInclude Include="Math.hpp" />
     <ClInclude Include="SceneRenderer.hpp" />
+    <ClInclude Include="ScreenBuffers.hpp" />
     <ClInclude Include="ShaderManager.hpp" />
     <ClInclude Include="ShaderResourcesImpl.hpp" />
     <ClInclude Include="shaders\ImGuiRenderer.if.h" />
