--- a/ShadowPeople/ShadowPeople.vcxproj
+++ b/ShadowPeople/ShadowPeople.vcxproj
@@ -118,6 +118,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AssetLoader.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="dx11\BufferImpl.cpp" />
     <ClCompile Include="dx11\BufferViewImpl.cpp" />
@@ -143,6 +144,7 @@
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Math.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="SceneRenderer.cpp" />
     <ClCompile Include="ScreenBuffers.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
@@ -150,6 +152,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Action.hpp" />
+    <ClInclude Include="AssetLoader.hpp" />
     <ClInclude Include="Camera.hpp" />
     <ClInclude Include="Descriptors.hpp" />
     <ClInclude Include="DX11Graphics.hpp" />
@@ -182,6 +185,7 @@
     <ClInclude Include="imgui\stb_truetype.h" />
     <ClInclude Include="InputHandler.hpp" />
     <ClInclude Include="Math.hpp" />
+    <ClInclude Include="Mesh.hpp" />
     <ClInclude Include="SceneRenderer.hpp" />
     <ClInclude Include="ScreenBuffers.hpp" />
     <ClInclude Include="ShaderManager.hpp" />
